Closed Bug 1798550 Opened 7 months ago Closed 7 months ago

[CtW] accessible/tests/browser/mac/browser_aria_controls_flowto.js - FAIL "dog-radio" has correct AXARIAControls

Categories

(Core :: Disability Access APIs, defect)

Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox108 --- fixed

People

(Reporter: morgan, Assigned: morgan)

References

Details

(Whiteboard: [ctw-m3])

Attachments

(1 file)

This is a CtW-only mac test failure. Full failure is:

accessible/tests/browser/mac/browser_aria_controls_flowto.js
FAIL "dog-radio" has correct AXARIAControls - ["info"] deepEqual ["cat-radio","dog-radio","info"] - JS frame :: chrome://mochitests/content/browser/accessible/tests/browser/mac/browser_aria_controls_flowto.js :: isLinkedUIElements :: line 74
Stack trace:
chrome://mochitests/content/browser/accessible/tests/browser/mac/browser_aria_controls_flowto.js:isLinkedUIElements:74
chrome://mochitests/content/browser/accessible/tests/browser/mac/browser_aria_controls_flowto.js:null:82
chrome://mochitests/content/browser/accessible/tests/browser/shared-head.js:accessibleTask/</<:554

Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/16601ea19370
Use cached name accessor method when computing MEMBER_OF r=eeejay
Status: NEW → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Whiteboard: [ctw-m3]
You need to log in before you can comment on or make changes to this bug.