Bug 1798550: Use cached name accessor method when computing MEMBER_OF r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D160948